Set color box to square.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 	<a href="#" class="myButton" onclick="randomColor()">Create Random Color!</a>
 	<div id="color"></div>
 	<div id="color-info">
-		HEX: #000000 </br>
+		<p>HEX: #000000 </p>
+	</br>
 		RGB: rgb (0, 0, 0)
 	</div>
 </body>
