--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<a href="#" class="myButton" onclick="addColors()">Create Random Color!</a>
+	<div id="header">
+		<div id="input">
+			<div>Numbers of colors: </div>
+			<input id="num" type="number" value="10" />
+		</div>
+		<div class="myButton" onclick="addColors()">Create Random Colors!</div>
+	</div>
 	<div id="colors">
 
 	</div>
