--- a/index.html
+++ b/index.html
@@ -1,17 +1,9 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Random Color</title>
-	<script src="random_color.js"></script>
-	<link rel="stylesheet" type="text/css" href="style.css">
-</head>
-
-</head>
-
-
-<!DOCTYPE html>
 <html lang="en">
   <head>
+		<title>Random Color</title>
+		<script src="random_color.js"></script>
+		<link rel="stylesheet" type="text/css" href="style.css">
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -20,51 +12,33 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
   </head>
   <body>
-		<center>
-			<div class="container">
-				<a href="#" class="myButton" onclick="randomColor()">Create Random Color!</a>
-				<button type="button" class="btn btn-dark">+</button>
-				<div id="color">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col"></div>
+				<div class="col" id="buttons">
+					<a onclick="randomColor()"> <p class="createButton">Create Random Color!</p> </a>
+					<button onclick="addColor()" type="button" class="btn-dark">+</button>
 				</div>
+				<div class="col"></div>
 			</div>
-</center>
-			<div class="container">
-				<div id="color-info" class="alert alert-primary">
-					<center>
+
+			<div class="row">
+				<div class="col"></div>
+				<div id="color-info" class="col">
 					HEX: #000000 <br>
 					RGB: rgb (0, 0, 0)
-				</center>
 				</div>
+				<div class="col"></div>
 			</div>
 
-			<div class="container">
-				<div class="title">Choosen Color</div>
-					<div class="storeColor alert alert-warning">
-
+			<div class="row">
+				<div class="col"></div>
+				<div class="col">
+					<div id="storeColor">
 					</div>
-
+				</div>
+				<div class="col"></div>
 			</div>
-
-
-
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
-		<script>
-			$(document).ready(function(){
-					$(".btn").click(function(){
-							var colorNumbers = $("#color-info");
-							var color = $("#color").css("backgroundColor");
-							var newObject = colorNumbers.clone();
-							newObject.css({
-								backgroundColor:color
-							});
-							$(".storeColor").prepend(newObject);
-
-
-					});
-
-			});
-		</script>
+		</div>
   </body>
 </html>
